--- a/builspec.yml
+++ b/builspec.yml
@@ -3,30 +3,23 @@ version: 0.2
 env:
   variables:
     AWS_REGION: "ap-south-1"
-    REPOSITORY_URI: "<aws_account_id>.dkr.ecr.${AWS_REGION}.amazonaws.com/brain-tasks-app"
+    REPOSITORY_URI: "224679997553.dkr.ecr.ap-south-1.amazonaws.com/project3/mindtrack-app"
 
 phases:
   pre_build:
     commands:
-      - echo "Starting pre_build phase"
-      - aws --version
-      - echo "Logging in to Amazon ECR..."
-      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin ${REPOSITORY_URI%/*}
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=${COMMIT_HASH:=latest}
+      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin 224679997553.dkr.ecr.ap-south-1.amazonaws.com 
+  
   build:
     commands:
-      - echo "Building the Docker image..."
-      - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
-      - docker tag $REPOSITORY_URI:$IMAGE_TAG $REPOSITORY_URI:latest
+      - docker build -t project3/mindtrack-app:$latest .
+      - docker tag project3/mindtrack-app:latest 224679997553.dkr.ecr.ap-south-1.amazonaws.com/project3/mindtrack-app:latest
+
   post_build:
     commands:
-      - echo "Pushing the Docker image to ECR..."
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - docker push $REPOSITORY_URI:latest
-      - echo "Creating imageDetail.json for downstream stages..."
-      - printf '[{"name":"braintasks","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imageDetail.json
+      - docker push 224679997553.dkr.ecr.ap-south-1.amazonaws.com/project3/mindtrack-app:latest
+      - printf '[{"name":"Brain-Tasks","imageUri":"%s.dkr.ecr.%s.amazonaws.com/%s:%s"}]' 224679997553 ap-south-1 project3/mindtrack-app latest > imagedefn.json
 
 artifacts:
   files:
-    - imageDetail.json
+    - imagedefn.json
