--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
   
   build:
     commands:
-      - docker build -t project3/mindtrack-app:$latest .
+      - docker build -t project3/mindtrack-app:latest .
       - docker tag project3/mindtrack-app:latest 224679997553.dkr.ecr.ap-south-1.amazonaws.com/project3/mindtrack-app:latest
 
   post_build:
