--- a/buildspec-deploy.yml
+++ b/buildspec-deploy.yml
@@ -10,14 +10,15 @@ phases:
     commands:
       #Updating Kubeconfig to access EKS cluster 
       - aws eks update-kubeconfig --region $REGION --name $CLUSTER_NAME
-
+      - TOKEN=$(aws eks get-token --cluster-name $CLUSTER_NAME --region $REGION --query 'status.token' --output text)
+  
   build:
     commands:
       #fetching latest image URI from ECR.
       - IMAGE_URI=$(cat image.json | jq -r '.[0].imageUri')
 
       # Updating image in deployment manifest file.
-      - kubectl set image deployment/mindtrack-deploy app-container=$IMAGE_URI --record
+      - kubectl set image deployment/mindtrack-deploy app-container=$IMAGE_URI --record --token=$TOKEN
       - kubectl rollout status deployment/mindtrack-deploy
       - kubectl apply -f deployment.yaml
       - kubectl apply -f service.yaml
