--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec: 
       containers: 
         - name: app-container
-          image: 224679997553.dkr.ecr.ap-south-1.amazonaws.com/project3/mindtrack-app:latest
+          image: <image_uri> 
           ports:
             - containerPort: 3000 
 
