--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec: 
       containers: 
         - name: app-container
-          image: <image_uri> 
+          image: "" 
           ports:
             - containerPort: 3000 
 
