--- a/deployspec.yml
+++ b/deployspec.yml
@@ -17,7 +17,7 @@ phases:
       - IMAGE_URI=$(cat image.json | jq -r '.[0].imageUri')
 
       # Updating image in deployment manifest file.
-      - sed -i "s|<image_uri>|$IMAGE_URI|g" deployment.yaml
+      - sed -i "s|image: \"\"|image: \"$IMAGE_URI\"|g" deployment.yaml
       - kubectl apply -f deployment.yaml
       - kubectl apply -f service.yaml
 
