--- a/deployspec.yml
+++ b/deployspec.yml
@@ -15,10 +15,10 @@ phases:
     commands:
       #fetching latest image URI from ECR.
       - IMAGE_URI=$(cat image.json | jq -r '.[0].imageUri')
-      - OLD_IMAGE=$(awk '/image:/ {print $2}' deployment.yaml)
+      #OLD_IMAGE=$(awk '/image:/ {print $2}' deployment.yaml)
       
       # Updating image in deployment manifest file.
-      - sed -i "s|^\(\s*image:\s*\).*|\1\"$IMAGE_URI\"|" deployment.yaml
+      - sed -i "s|image:.*|image: $IMAGE_URI|" deployment.yaml
       - kubectl apply -f deployment.yaml
       - kubectl apply -f service.yaml
 
